[package]
name = "xscript"
description = "A library for writing robust shell-script-like programs and running commands with ease."
version = "0.4.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", optional = true, features = ["rc", "derive"] }
tokio = { version = "1.29.1", optional = true, features = ["process", "macros", "io-std", "io-util"] }

[features]
async = []
serde = ["dep:serde"]
tokio = ["dep:tokio", "async"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "xscript_unstable"]
rustc-args = ["--cfg", "xscript_unstable"]
